--- a/index.html
+++ b/index.html
@@ -3,39 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
       type="image/png"
-      sizes="32x32"
+      sizes="32x32" 
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap">
 
     <title>Frontend Mentor | Social proof section</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
-  <body>
-    10,000+ of our users love our products.
 
-    We only provide great products combined with excellent customer service.
-    See what our satisfied customers are saying about our services.
+  <body>
+    <div>
+      <h1>10,000+ of our users love our products.</h1>
+      <div id="intro">We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.</div>
+    </div>
+    <div>
+      <div class="rating">
+        <div class="stars">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+        </div>
+        <p>Rated 5 Stars in Reviews</p>
+      </div>
+      <div class="rating">
+        <div class="stars">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+        </div>
+        <p>Rated 5 Stars in Report Guru</p>
+      </div>
+      <div class="rating">
+        <div class="stars">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+          <img src="images/icon-star.svg">
+        </div>
+        <p>Rated 5 Stars in BestTech</p>
+      </div>
+    </div>
     
-    Rated 5 Stars in Reviews
-    Rated 5 Stars in Report Guru
-    Rated 5 Stars in BestTech
-    
-    Colton Smith 
+    <!-- Colton Smith 
     Verified Buyer
     "We needed the same printed design as the one we had ordered a week prior.
     Not only did they find the original order, but we also received it in time.
@@ -49,7 +69,7 @@
     Anne Wallace 
     Verified Buyer
     "Put an order with this company and can only praise them for the very high
-    standard. Will definitely use them again and recommend them to everyone!"
+    standard. Will definitely use them again and recommend them to everyone!" -->
 
     <div class="attribution">
       Challenge by
