--- a/index.html
+++ b/index.html
@@ -17,75 +17,77 @@
   </head>
 
   <body>
-    <div id='mainSection'>
-      <div>
-        <h1>10,000+ of our users love our products.</h1>
-        <div id="intro">We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.</div>
-      </div>
-      <div>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-          </div>
-          <p>Rated 5 Stars in Reviews</p>
+    <div id="background">
+      <div id='mainSection'>
+        <div>
+          <h1>10,000+ of our users love our products.</h1>
+          <div id="intro">We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.</div>
         </div>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
+        <div>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+            </div>
+            <p>Rated 5 Stars in Reviews</p>
           </div>
-          <p>Rated 5 Stars in Report Guru</p>
-        </div>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
+          <div class="rating">
+            <div class="stars">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+            </div>
+            <p>Rated 5 Stars in Report Guru</p>
           </div>
-          <p>Rated 5 Stars in BestTech</p>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+              <img src="images/icon-star.svg">
+            </div>
+            <p>Rated 5 Stars in BestTech</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="commentSection">
-      <div class="comment">
-        <img src="images/image-colton.jpg">
-        <div id="name">Colton Smith</div>
-        <div id="status">Verified Buyer</div>
-        <p>" We needed the same printed design as the one we had ordered a week prior.
-          Not only did they find the original order, but we also received it in time.
-          Excellent! "</p>
+      <div id="commentSection">
+        <div class="comment">
+          <img src="images/image-colton.jpg">
+          <div id="name">Colton Smith</div>
+          <div id="status">Verified Buyer</div>
+          <p>" We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent! "</p>
+        </div>
+        <div class="comment">
+          <img src="images/image-irene.jpg">
+          <div id="name">Irene Roberts</div>
+          <div id="status">Verified Buyer</div>
+          <p>" Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery. "</p>
+        </div>
+        <div class="comment">
+          <img src="images/image-anne.jpg">
+          <div id="name">Anne Wallace</div>
+          <div id="status">Verified Buyer</div>
+          <p>" Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone! "</p>
+        </div>
       </div>
-      <div class="comment">
-        <img src="images/image-irene.jpg">
-        <div id="name">Irene Roberts</div>
-        <div id="status">Verified Buyer</div>
-        <p>" Customer service is always excellent and very quick turn around. Completely
-          delighted with the simplicity of the purchase and the speed of delivery. "</p>
-      </div>
-      <div class="comment">
-        <img src="images/image-anne.jpg">
-        <div id="name">Anne Wallace</div>
-        <div id="status">Verified Buyer</div>
-        <p>" Put an order with this company and can only praise them for the very high
-          standard. Will definitely use them again and recommend them to everyone! "</p>
-      </div>
-    </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
     </div>
   </body>
 </html>
