--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <body>
     <div id="background">
-      <div id='mainSection'>
-        <div>
+      <div id="mainSection">
+        <div id="headerSection">
           <h1>10,000+ of our users love our products.</h1>
           <div id="intro">We only provide great products combined with excellent customer service.
             See what our satisfied customers are saying about our services.</div>
         </div>
-        <div>
+        <div id="ratingSection">
           <div class="rating">
             <div class="stars">
               <img src="images/icon-star.svg">
