Finish desktop design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <div id="background">
-      <div id="mainSection">
+      <div class="clearfix" id="mainSection">
         <div id="headerSection">
           <h1>10,000+ of our users love our products.</h1>
           <div id="intro">We only provide great products combined with excellent customer service.
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div id="commentSection">
+      <div class="clearfix" id="commentSection">
         <div class="comment">
           <img src="images/image-colton.jpg">
           <div id="name">Colton Smith</div>
@@ -82,12 +82,12 @@
         </div>
       </div>
 
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </div>
+    </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
     </div>
   </body>
 </html>
